--- a/tarmaq-adémie/index.html
+++ b/tarmaq-adémie/index.html
@@ -18,7 +18,7 @@
         font-family: 'Inter', sans-serif;
       }
       .gradient-bg {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        background: linear-gradient(135deg, #E30007 0%, #CC0006 100%);
       }
       .card-hover {
         transition: all 0.3s ease;
@@ -34,17 +34,128 @@
       .card-hover:hover .category-icon {
         transform: scale(1.1);
       }
+
+      /* Header styles */
+      .btn-secondary {
+        background: rgba(255, 255, 255, 0.9);
+        color: #2a2a2a;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: 1px solid #e8e8ec;
+        cursor: pointer;
+      }
+
+      .btn-secondary:hover {
+        background: white;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .btn-gradient {
+        background: linear-gradient(140deg, #F4999C, #E30007);
+        color: white;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: none;
+        cursor: pointer;
+      }
+
+      .btn-gradient:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(227, 0, 7, 0.25);
+      }
+
+      /* Navigation styles */
+      .nav-item {
+        position: relative;
+      }
+
+      .nav-dropdown {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-10px);
+        transition: all 0.3s ease;
+      }
+
+      .nav-item:hover .nav-dropdown {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+      }
     </style>
   </head>
   <body class="bg-gray-50">
     <!-- Header -->
+    <header class="sticky top-0 z-50 backdrop-blur-xl bg-white/80 border-b border-stroke/50">
+        <div class="max-w-7xl mx-auto px-8">
+            <div class="flex items-center justify-between h-20">
+                <!-- Logo -->
+                <div class="flex items-center gap-4">
+                    <img src="../src/assets/logo.png" alt="tarmaq" class="h-12 w-auto" />
+                </div>
+
+                <!-- Desktop Navigation -->
+                <nav class="hidden lg:flex items-center gap-8">
+                    <a href="../index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                    <a href="index.html" class="font-semibold text-brand">Cours Libre</a>
+                    <a href="../tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                    <a href="../Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                    <a href="../tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                </nav>
+
+                <!-- CTA Buttons -->
+                <div class="hidden lg:flex items-center gap-4">
+                    <button class="btn-secondary">Appel à soutien</button>
+                    <button class="btn-gradient">Faire un don</button>
+                </div>
+
+                <!-- View Switcher and Mobile Menu Button -->
+                <div class="flex items-center gap-2">
+                    <!-- View Switcher Button -->
+                    <button id="viewSwitcher" class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2" title="Passer à la vue mobile">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h16l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        </svg>
+                    </button>
+                    <!-- Mobile Menu Button -->
+                    <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Mobile Menu -->
+        <div id="mobileMenu" class="lg:hidden bg-white border-t border-stroke hidden">
+            <div class="max-w-7xl mx-auto px-8 py-4">
+                <nav class="flex flex-col space-y-4">
+                    <a href="../index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Accueil</a>
+                    <a href="index.html" class="font-semibold text-brand py-2">Cours Libre</a>
+                    <a href="../tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Projet</a>
+                    <a href="../Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Budget</a>
+                    <a href="../tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Mindmap</a>
+                    <div class="flex flex-col space-y-2 pt-4 border-t border-stroke">
+                        <button class="btn-secondary w-full text-center">Appel à soutien</button>
+                        <button class="btn-gradient w-full text-center">Faire un don</button>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- Header -->
     <div class="gradient-bg text-white py-16">
       <div class="max-w-6xl mx-auto px-6 text-center">
         <i class="fas fa-graduation-cap text-6xl mb-6 opacity-90"></i>
-        <h1 class="text-5xl font-bold mb-6">Academdy</h1>
+        <h1 class="text-5xl font-bold mb-6">Cours Libre</h1>
         <p class="text-xl opacity-90 max-w-3xl mx-auto">
-          Your comprehensive learning hub for Finance, AI, Marketing, Sales,
-          Education, and Case Studies
+          Votre hub d'apprentissage complet pour la Finance, l'IA, le Marketing, la Vente,
+          l'Éducation et les Études de Cas
         </p>
         <div class="mt-8 flex justify-center space-x-4 text-sm">
           <span class="bg-white bg-opacity-20 px-4 py-2 rounded-full"
@@ -128,6 +239,36 @@
               </div>
             </a>
             <a
+              href="Guide Complet - 10 Nœuds Communautaires n8n Révolutionnaires.html"
+              class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
+            >
+              <h3 class="font-semibold text-blue-800 mb-1">
+                Guide Complet - 10 Nœuds Communautaires n8n Révolutionnaires
+              </h3>
+              <p class="text-sm text-blue-700">
+                Guide complet des 10 nœuds communautaires n8n révolutionnaires pour l'automatisation
+              </p>
+              <div class="flex items-center mt-2 text-xs text-blue-600">
+                <i class="fas fa-cogs mr-1"></i>
+                <span>n8n Automation</span>
+              </div>
+            </a>
+            <a
+              href="TardingAI.html"
+              class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
+            >
+              <h3 class="font-semibold text-blue-800 mb-1">
+                Créer une Stratégie de Trading IA Complète
+              </h3>
+              <p class="text-sm text-blue-700">
+                Guide étape par étape pour créer des stratégies de trading rentables avec l'IA
+              </p>
+              <div class="flex items-center mt-2 text-xs text-blue-600">
+                <i class="fas fa-chart-line mr-1"></i>
+                <span>Trading IA</span>
+              </div>
+            </a>
+            <a
               href="Analyse Vidéo - Claude Code + Playwright MCP.html"
               class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
             >
@@ -140,6 +281,51 @@
               <div class="flex items-center mt-2 text-xs text-blue-600">
                 <i class="fas fa-video mr-1"></i>
                 <span>Video Analysis</span>
+              </div>
+            </a>
+            <a
+              href="claude-code-custom-workflows.html"
+              class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
+            >
+              <h3 class="font-semibold text-blue-800 mb-1">
+                Claude Code Custom Workflows
+              </h3>
+              <p class="text-sm text-blue-700">
+                Créer des workflows personnalisés avec Claude Code pour l'automatisation
+              </p>
+              <div class="flex items-center mt-2 text-xs text-blue-600">
+                <i class="fas fa-code mr-1"></i>
+                <span>Claude Code</span>
+              </div>
+            </a>
+            <a
+              href="Guide Complet _ Créer des Agents IA avec Claude + N8N + Docker.html"
+              class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
+            >
+              <h3 class="font-semibold text-blue-800 mb-1">
+                Guide Complet - Créer des Agents IA avec Claude + N8N + Docker
+              </h3>
+              <p class="text-sm text-blue-700">
+                Guide complet pour créer des agents IA avec Claude, N8N et Docker
+              </p>
+              <div class="flex items-center mt-2 text-xs text-blue-600">
+                <i class="fas fa-robot mr-1"></i>
+                <span>IA Agents</span>
+              </div>
+            </a>
+            <a
+              href="risk-management-course.html"
+              class="block p-3 bg-blue-50 rounded-lg hover:bg-blue-100 transition-colors"
+            >
+              <h3 class="font-semibold text-blue-800 mb-1">
+                Gestion du risque en investissement
+              </h3>
+              <p class="text-sm text-blue-700">
+                Mini-cours pratique basé sur l'article eToro et des ressources vidéo de référence
+              </p>
+              <div class="flex items-center mt-2 text-xs text-blue-600">
+                <i class="fas fa-shield-alt mr-1"></i>
+                <span>Finance</span>
               </div>
             </a>
           </div>
@@ -356,7 +542,7 @@
             >
               <i class="fas fa-check-circle text-2xl text-green-600"></i>
             </div>
-            <h3 class="text-2xl font-bold text-gray-800">3</h3>
+            <h3 class="text-2xl font-bold text-gray-800">9</h3>
             <p class="text-gray-600">Active Courses</p>
           </div>
           <div class="text-center">
@@ -513,5 +699,15 @@
         </div>
       </div>
     </footer>
+    
+    <!-- Mobile menu toggle function -->
+    <script>
+        function toggleMobileMenu() {
+            const mobileMenu = document.getElementById('mobileMenu');
+            if (mobileMenu) {
+                mobileMenu.classList.toggle('hidden');
+            }
+        }
+    </script>
   </body>
 </html>
