--- a/tarmaq-desktop2.html
+++ b/tarmaq-desktop2.html
@@ -201,7 +201,7 @@
           <!-- Desktop Navigation -->
           <nav class="hidden lg:flex items-center gap-8">
             <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
-            <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
+            <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
             <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
             <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
             <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
@@ -236,7 +236,7 @@
               </svg>
             </button>
             <!-- Mobile Menu Button -->
-            <button class="lg:hidden p-2">
+            <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
               <svg
                 class="w-6 h-6"
                 fill="none"
@@ -252,6 +252,23 @@
               </svg>
             </button>
           </div>
+        </div>
+      </div>
+      
+      <!-- Mobile Menu -->
+      <div id="mobileMenu" class="lg:hidden bg-white border-t border-stroke hidden">
+        <div class="max-w-7xl mx-auto px-8 py-4">
+          <nav class="flex flex-col space-y-4">
+            <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Accueil</a>
+            <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Cours Libre</a>
+            <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Projet</a>
+            <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Budget</a>
+            <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Mindmap</a>
+            <div class="flex flex-col space-y-2 pt-4 border-t border-stroke">
+              <button class="btn-secondary w-full text-center">Appel à soutien</button>
+              <button class="btn-gradient w-full text-center">Faire un don</button>
+            </div>
+          </nav>
         </div>
       </div>
     </header>
@@ -877,6 +894,14 @@
           viewSwitcher.classList.add('ring-2', 'ring-brand/20');
         }
       });
+
+      // Mobile menu toggle function
+      function toggleMobileMenu() {
+        const mobileMenu = document.getElementById('mobileMenu');
+        if (mobileMenu) {
+          mobileMenu.classList.toggle('hidden');
+        }
+      }
     </script>
   </body>
 </html>
