--- a/tarmaq-mobile.html
+++ b/tarmaq-mobile.html
@@ -51,6 +51,42 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    
+    <!-- Navigation styles -->
+    <style>
+      .btn-secondary {
+        background: rgba(255, 255, 255, 0.9);
+        color: #2a2a2a;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: 1px solid #e8e8ec;
+        cursor: pointer;
+      }
+
+      .btn-secondary:hover {
+        background: white;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .btn-gradient {
+        background: linear-gradient(140deg, #ff9d9b, #da2f2c);
+        color: white;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: none;
+        cursor: pointer;
+      }
+
+      .btn-gradient:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(218, 47, 44, 0.25);
+      }
+    </style>
   </head>
   <body class="bg-gray-100 font-inter">
     <!-- Mobile Device Frame Simulation -->
@@ -66,136 +102,60 @@
         <!-- Content Container -->
         <div class="h-full overflow-y-auto bg-white">
           <!-- Header -->
-          <header
-            class="sticky top-0 z-50 bg-white/90 backdrop-blur-md border-b border-stroke"
-          >
-            <div class="flex items-center justify-between px-6 py-4">
-              <div class="flex items-center gap-3">
-                <img src="src/assets/logo.png" alt="tarmaq" class="w-8 h-8" />
-                <span class="text-xl font-bold text-ink-2">tarmaq</span>
+          <header class="sticky top-0 z-50 backdrop-blur-xl bg-white/80 border-b border-stroke/50">
+              <div class="max-w-7xl mx-auto px-8">
+                  <div class="flex items-center justify-between h-20">
+                      <!-- Logo -->
+                      <div class="flex items-center gap-4">
+                          <img src="src/assets/logo.png" alt="tarmaq" class="h-12 w-auto">
+                      </div>
+                      <!-- Desktop Navigation -->
+                      <nav class="hidden lg:flex items-center gap-8">
+                          <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                          <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+                          <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                          <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                          <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                      </nav>
+                      <!-- CTA Buttons -->
+                      <div class="hidden lg:flex items-center gap-4">
+                          <button class="btn-secondary">Appel à soutien</button>
+                          <button class="btn-gradient">Faire un don</button>
+                      </div>
+                      <!-- View Switcher and Mobile Menu Button -->
+                      <div class="flex items-center gap-2">
+                          <!-- View Switcher Button -->
+                          <button id="viewSwitcher" class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2" title="Passer à la vue mobile">
+                              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                              </svg>
+                          </button>
+                          <!-- Mobile Menu Button -->
+                          <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
+                              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                              </svg>
+                          </button>
+                      </div>
+                  </div>
               </div>
-              <div class="flex items-center gap-2">
-                <!-- Navigation Links (Mobile) -->
-                <div class="hidden sm:flex items-center gap-3">
-                  <a href="index.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Accueil</a>
-                  <a href="tarmaq-adémie/index.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Académie</a>
-                  <a href="tarmaq_version_html_fondateur.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Projet</a>
-                  <a href="Budget.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Budget</a>
-                  <a href="tarmaq_interactive_mindmap.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Mindmap</a>
-                </div>
-                <!-- View Switcher Button -->
-                <button
-                  id="viewSwitcher"
-                  class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2"
-                  title="Passer à la vue desktop"
-                >
-                  <svg
-                    class="w-5 h-5"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                    ></path>
-                  </svg>
-                </button>
-                <!-- Mobile Menu Button -->
-                <button
-                  id="menuBtn"
-                  class="p-2 hover:bg-gray-100 rounded-lg transition-colors"
-                >
-                  <svg
-                    class="w-6 h-6 text-ink-2"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M4 6h16M4 12h16M4 18h16"
-                    ></path>
-                  </svg>
-                </button>
+              <!-- Mobile Menu -->
+              <div id="mobileMenu" class="lg:hidden hidden bg-white border-t border-stroke/50">
+                  <div class="px-8 py-4 space-y-4">
+                      <a href="index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                      <a href="tarmaq-adémie/index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+                      <a href="tarmaq_version_html_fondateur.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                      <a href="Budget.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                      <a href="tarmaq_interactive_mindmap.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                      <div class="pt-4 space-y-2">
+                          <button class="btn-secondary w-full">Appel à soutien</button>
+                          <button class="btn-gradient w-full">Faire un don</button>
+                      </div>
+                  </div>
               </div>
-            </div>
           </header>
 
-          <!-- Mobile Menu Overlay -->
-          <div
-            id="mobileMenu"
-            class="fixed inset-0 bg-black/50 backdrop-blur-sm z-50 hidden"
-          >
-            <div class="absolute top-0 right-0 w-80 h-full bg-white shadow-2xl">
-              <div class="p-6">
-                <div class="flex items-center justify-between mb-8">
-                  <span class="text-xl font-bold text-ink-2">Menu</span>
-                  <button
-                    id="closeMenu"
-                    class="p-2 hover:bg-gray-100 rounded-lg"
-                  >
-                    <svg
-                      class="w-6 h-6 text-ink-2"
-                      fill="none"
-                      stroke="currentColor"
-                      viewBox="0 0 24 24"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M6 18L18 6M6 6l12 12"
-                      ></path>
-                    </svg>
-                  </button>
-                </div>
-                <nav class="space-y-4">
-                  <a
-                    href="#programmes"
-                    class="block py-3 px-4 text-ink-2 hover:bg-gray-50 rounded-lg transition-colors"
-                    >Programmes</a
-                  >
-                  <a
-                    href="#experiences"
-                    class="block py-3 px-4 text-ink-2 hover:bg-gray-50 rounded-lg transition-colors"
-                    >Expériences</a
-                  >
-                  <a
-                    href="#communaute"
-                    class="block py-3 px-4 text-ink-2 hover:bg-gray-50 rounded-lg transition-colors"
-                    >Communauté</a
-                  >
-                  <a
-                    href="#agenda"
-                    class="block py-3 px-4 text-ink-2 hover:bg-gray-50 rounded-lg transition-colors"
-                    >Agenda</a
-                  >
-                  <a
-                    href="#partenaires"
-                    class="block py-3 px-4 text-ink-2 hover:bg-gray-50 rounded-lg transition-colors"
-                    >Partenaires</a
-                  >
-                  <div class="pt-4 space-y-3">
-                    <a
-                      href="#soutien"
-                      class="block w-full py-3 px-4 bg-stroke text-ink-2 text-center rounded-lg hover:bg-gray-200 transition-colors"
-                      >Appel à soutien</a
-                    >
-                    <a
-                      href="#don"
-                      class="block w-full py-3 px-4 bg-brand text-white text-center rounded-lg hover:bg-brand-600 transition-colors"
-                      >Faire un don</a
-                    >
-                  </div>
-                </nav>
-              </div>
-            </div>
-          </div>
+
 
           <!-- Hero Section -->
           <section
@@ -713,36 +673,17 @@
 
     <!-- JavaScript for Mobile Menu -->
     <script>
-      const menuBtn = document.getElementById('menuBtn');
-      const mobileMenu = document.getElementById('mobileMenu');
-      const closeMenu = document.getElementById('closeMenu');
       const viewSwitcher = document.getElementById('viewSwitcher');
 
-      // Mobile menu functionality
-      menuBtn.addEventListener('click', () => {
-        mobileMenu.classList.remove('hidden');
-        document.body.style.overflow = 'hidden';
-      });
-
-      closeMenu.addEventListener('click', () => {
-        mobileMenu.classList.add('hidden');
-        document.body.style.overflow = 'auto';
-      });
-
-      mobileMenu.addEventListener('click', e => {
-        if (e.target === mobileMenu) {
+      // Mobile menu toggle function
+      function toggleMobileMenu() {
+        const mobileMenu = document.getElementById('mobileMenu');
+        if (mobileMenu.classList.contains('hidden')) {
+          mobileMenu.classList.remove('hidden');
+        } else {
           mobileMenu.classList.add('hidden');
-          document.body.style.overflow = 'auto';
         }
-      });
-
-      // Close menu when clicking on navigation links
-      document.querySelectorAll('#mobileMenu a').forEach(link => {
-        link.addEventListener('click', () => {
-          mobileMenu.classList.add('hidden');
-          document.body.style.overflow = 'auto';
-        });
-      });
+      }
 
       // View switcher functionality
       viewSwitcher.addEventListener('click', () => {
