--- a/tarmaq-responsive.html
+++ b/tarmaq-responsive.html
@@ -99,6 +99,40 @@
         transition: all 0.3s ease;
       }
 
+      /* Navigation styles */
+      .btn-secondary {
+        background: rgba(255, 255, 255, 0.9);
+        color: #2a2a2a;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: 1px solid #e8e8ec;
+        cursor: pointer;
+      }
+
+      .btn-secondary:hover {
+        background: white;
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .btn-gradient {
+        background: linear-gradient(140deg, #ff9d9b, #da2f2c);
+        color: white;
+        padding: 14px 24px;
+        border-radius: 16px;
+        font-weight: 700;
+        transition: all 0.3s ease;
+        border: none;
+        cursor: pointer;
+      }
+
+      .btn-gradient:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 8px 20px rgba(218, 47, 44, 0.25);
+      }
+
       .card-hover:hover {
         transform: translateY(-8px);
         box-shadow: 0 20px 40px rgba(0, 0, 0, 0.12);
@@ -329,38 +363,56 @@
           <!-- Content Container -->
           <div class="h-full overflow-y-auto bg-white">
             <!-- Mobile Header -->
-            <header class="mobile-header sticky top-0 z-50 bg-white/90 backdrop-blur-md border-b border-stroke">
-              <div class="flex items-center justify-between px-6 py-4">
-                <div class="flex items-center gap-3">
-                  <img src="src/assets/logo.png" alt="tarmaq" />
-                </div>
-                <div class="flex items-center gap-2">
-                  <!-- View Switcher Button -->
-                  <button
-                    id="mobileViewSwitcher"
-                    class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2"
-                    title="Passer à la vue desktop"
-                  >
-                    <svg
-                      class="w-5 h-5"
-                      fill="none"
-                      stroke="currentColor"
-                      viewBox="0 0 24 24"
+            <header class="mobile-header sticky top-0 z-50 backdrop-blur-xl bg-white/80 border-b border-stroke/50">
+              <div class="max-w-7xl mx-auto px-8">
+                <div class="flex items-center justify-between h-20">
+                  <!-- Logo -->
+                  <div class="flex items-center gap-4">
+                    <img src="src/assets/logo.png" alt="tarmaq" class="h-12 w-auto" />
+                  </div>
+                  <!-- View Switcher and Mobile Menu Button -->
+                  <div class="flex items-center gap-2">
+                    <!-- View Switcher Button -->
+                    <button
+                      id="mobileViewSwitcher"
+                      class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2"
+                      title="Passer à la vue desktop"
                     >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                      ></path>
-                    </svg>
-                  </button>
-                  <!-- Mobile Menu Button -->
-                  <button id="mobileMenuBtn" class="p-2 hover:bg-gray-100 rounded-lg transition-colors">
-                    <svg class="w-6 h-6 text-ink-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                  </button>
+                      <svg
+                        class="w-5 h-5"
+                        fill="none"
+                        stroke="currentColor"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                        ></path>
+                      </svg>
+                    </button>
+                    <!-- Mobile Menu Button -->
+                    <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
+                      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!-- Mobile Menu -->
+              <div id="mobileMenu" class="lg:hidden hidden bg-white border-t border-stroke/50">
+                <div class="px-8 py-4 space-y-4">
+                  <a href="index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                  <a href="tarmaq-adémie/index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+                  <a href="tarmaq_version_html_fondateur.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                  <a href="Budget.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                  <a href="tarmaq_interactive_mindmap.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                  <div class="pt-4 space-y-2">
+                    <button class="btn-secondary w-full">Appel à soutien</button>
+                    <button class="btn-gradient w-full">Faire un don</button>
+                  </div>
                 </div>
               </div>
             </header>
@@ -685,7 +737,7 @@
           <!-- Desktop Navigation -->
           <nav class="hidden lg:flex items-center gap-8">
             <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
-            <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
+                                <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
             <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
             <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
             <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
@@ -720,7 +772,7 @@
               </svg>
             </button>
             <!-- Mobile Menu Button -->
-            <button class="lg:hidden p-2">
+            <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
               <svg
                 class="w-6 h-6"
                 fill="none"
@@ -735,6 +787,20 @@
                 ></path>
               </svg>
             </button>
+          </div>
+        </div>
+      </div>
+      <!-- Mobile Menu -->
+      <div id="mobileMenu" class="lg:hidden hidden bg-white border-t border-stroke/50">
+        <div class="px-8 py-4 space-y-4">
+          <a href="index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+          <a href="tarmaq-adémie/index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+          <a href="tarmaq_version_html_fondateur.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+          <a href="Budget.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+          <a href="tarmaq_interactive_mindmap.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+          <div class="pt-4 space-y-2">
+            <button class="btn-secondary w-full">Appel à soutien</button>
+            <button class="btn-gradient w-full">Faire un don</button>
           </div>
         </div>
       </div>
@@ -1344,36 +1410,14 @@
         }
       });
 
-      // Mobile menu functionality
-      const mobileMenuBtn = document.getElementById('mobileMenuBtn');
-      const mobileMenu = document.getElementById('mobileMenu');
-      const closeMobileMenu = document.getElementById('closeMobileMenu');
-
-      if (mobileMenuBtn && mobileMenu && closeMobileMenu) {
-        mobileMenuBtn.addEventListener('click', () => {
+      // Mobile menu toggle function
+      function toggleMobileMenu() {
+        const mobileMenu = document.getElementById('mobileMenu');
+        if (mobileMenu.classList.contains('hidden')) {
           mobileMenu.classList.remove('hidden');
-          document.body.style.overflow = 'hidden';
-        });
-
-        closeMobileMenu.addEventListener('click', () => {
+        } else {
           mobileMenu.classList.add('hidden');
-          document.body.style.overflow = 'auto';
-        });
-
-        mobileMenu.addEventListener('click', (e) => {
-          if (e.target === mobileMenu) {
-            mobileMenu.classList.add('hidden');
-            document.body.style.overflow = 'auto';
-          }
-        });
-
-        // Close menu when clicking on navigation links
-        document.querySelectorAll('#mobileMenu a').forEach((link) => {
-          link.addEventListener('click', () => {
-            mobileMenu.classList.add('hidden');
-            document.body.style.overflow = 'auto';
-          });
-        });
+        }
       }
 
       // Mobile view switcher functionality
