--- a/tarmaq_interactive_mindmap.html
+++ b/tarmaq_interactive_mindmap.html
@@ -27,6 +27,45 @@
 
         .selected { outline: 3px solid var(--secondary); outline-offset: 2px; }
 
+        /* Navigation styles */
+        .btn-secondary {
+          background: rgba(255, 255, 255, 0.9);
+          color: #2a2a2a;
+          padding: 14px 24px;
+          border-radius: 16px;
+          font-weight: 700;
+          transition: all 0.3s ease;
+          border: 1px solid #e8e8ec;
+          cursor: pointer;
+        }
+
+        .btn-secondary:hover {
+          background: white;
+          transform: translateY(-2px);
+          box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-gradient {
+          background: linear-gradient(140deg, #ff9d9b, #da2f2c);
+          color: white;
+          padding: 14px 24px;
+          border-radius: 16px;
+          font-weight: 700;
+          transition: all 0.3s ease;
+          border: none;
+          cursor: pointer;
+        }
+
+        .btn-gradient:hover {
+          transform: translateY(-2px);
+          box-shadow: 0 8px 20px rgba(218, 47, 44, 0.25);
+        }
+
+        /* Header text colors */
+        .text-ink-2 { color: #2a2a2a; }
+        .text-brand { color: #da2f2c; }
+        .border-stroke { border-color: #e8e8ec; }
+
         * {
             margin: 0;
             padding: 0;
@@ -374,6 +413,60 @@
     </style>
 </head>
 <body>
+        <!-- Header -->
+        <header class="sticky top-0 z-50 backdrop-blur-xl bg-white/80 border-b border-stroke/50">
+            <div class="max-w-7xl mx-auto px-8">
+                <div class="flex items-center justify-between h-20">
+                    <!-- Logo -->
+                    <div class="flex items-center gap-4">
+                        <img src="src/assets/logo.png" alt="tarmaq" class="h-12 w-auto">
+                    </div>
+                    <!-- Desktop Navigation -->
+                    <nav class="hidden lg:flex items-center gap-8">
+                        <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                        <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+                        <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                        <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                        <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                    </nav>
+                    <!-- CTA Buttons -->
+                    <div class="hidden lg:flex items-center gap-4">
+                        <button class="btn-secondary">Appel à soutien</button>
+                        <button class="btn-gradient">Faire un don</button>
+                    </div>
+                    <!-- View Switcher and Mobile Menu Button -->
+                    <div class="flex items-center gap-2">
+                        <!-- View Switcher Button -->
+                        <button id="viewSwitcher" class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2" title="Passer à la vue mobile">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                            </svg>
+                        </button>
+                        <!-- Mobile Menu Button -->
+                        <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
+                            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobileMenu" class="lg:hidden hidden bg-white border-t border-stroke/50">
+                <div class="px-8 py-4 space-y-4">
+                    <a href="index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                    <a href="tarmaq-adémie/index.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
+                    <a href="tarmaq_version_html_fondateur.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+                    <a href="Budget.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+                    <a href="tarmaq_interactive_mindmap.html" class="block font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                    <div class="pt-4 space-y-2">
+                        <button class="btn-secondary w-full">Appel à soutien</button>
+                        <button class="btn-gradient w-full">Faire un don</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+
     <div class="mindmap-container" id="mindmapContainer">
         <div class="mindmap" id="mindmap">
             <svg id="wires" width="4000" height="3000" style="position:absolute; inset:0; pointer-events:none;"></svg>
@@ -1167,6 +1260,16 @@
             const rect = container.getBoundingClientRect();
             tooltip.style.left = (e.clientX - rect.left + 10) + 'px';
             tooltip.style.top = (e.clientY - rect.top - 10) + 'px';
+        }
+
+        // Mobile menu toggle function
+        function toggleMobileMenu() {
+            const mobileMenu = document.getElementById('mobileMenu');
+            if (mobileMenu.classList.contains('hidden')) {
+                mobileMenu.classList.remove('hidden');
+            } else {
+                mobileMenu.classList.add('hidden');
+            }
         }
     </script>
 </body>
