--- a/tarmaq_version_html_fondateur.html
+++ b/tarmaq_version_html_fondateur.html
@@ -465,18 +465,11 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="sticky top-0 z-50 backdrop-blur-xl bg-white/80 border-b border-stroke/50">
-        <div class="max-w-7xl mx-auto px-8">
-            <div class="flex items-center justify-between h-20">
-                <!-- Logo -->
-                <div class="flex items-center gap-4">
-                    <img src="src/assets/logo.png" alt="tarmaq" class="h-12 w-auto" />
-                </div>
 
                 <!-- Desktop Navigation -->
                 <nav class="hidden lg:flex items-center gap-8">
                     <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
-                    <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
+                    <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Cours Libre</a>
                     <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-brand">Projet</a>
                     <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
                     <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
@@ -485,12 +478,19 @@
                 <!-- CTA Buttons -->
                 <div class="hidden lg:flex items-center gap-4">
                     <button class="btn-secondary">Appel à soutien</button>
-                    <button class="btn-gradient">Faire un don</button>
+                    <button class="btn-gradient">Devenir mécène</button>
                 </div>
 
-                <!-- Mobile Menu Button -->
+                <!-- View Switcher and Mobile Menu Button -->
                 <div class="flex items-center gap-2">
-                    <button class="lg:hidden p-2">
+                    <!-- View Switcher Button -->
+                    <button id="viewSwitcher" class="p-2 hover:bg-gray-100 rounded-lg transition-colors text-ink-2" title="Passer à la vue mobile">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h16l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        </svg>
+                    </button>
+                    <!-- Mobile Menu Button -->
+                    <button class="lg:hidden p-2" onclick="toggleMobileMenu()">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                         </svg>
@@ -498,33 +498,24 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Mobile Menu -->
+        <div id="mobileMenu" class="lg:hidden bg-white border-t border-stroke hidden">
+            <div class="max-w-7xl mx-auto px-8 py-4">
+                <nav class="flex flex-col space-y-4">
+                    <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Accueil</a>
+                    <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Cours Libre</a>
+                    <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-brand py-2">Projet</a>
+                    <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Budget</a>
+                    <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors py-2">Mindmap</a>
+                    <div class="flex flex-col space-y-2 pt-4 border-t border-stroke">
+                        <button class="btn-secondary w-full text-center">Appel à soutien</button>
+                        <button class="btn-gradient w-full text-center">Devenir mécène</button>
+                    </div>
+                </nav>
+            </div>
+        </div>
     </header>
-
-
-
-    <!-- Sticky top bar with CTA + theme toggle -->
-    <div class="topbar" role="navigation" aria-label="Barre supérieure">
-      <div class="wrap container">
-        <div style="display: flex; align-items: center; gap: 16px">
-          <img
-            src="src/assets/logo.png"
-            alt="tarmaq logo"
-            style="height: 40px; width: auto"
-          />
-        </div>
-        <div class="actions">
-          <button
-            id="toggleTheme"
-            class="btn"
-            type="button"
-            aria-label="Basculer le thème"
-          >
-            🌗 Thème
-          </button>
-          <a class="btn primary" href="#contact">Devenir mécène</a>
-        </div>
-      </div>
-    </div>
 
     <header class="hero">
       <div class="container inner">
@@ -1434,6 +1425,14 @@
           );
         });
       })();
+
+      // Mobile menu toggle function
+      function toggleMobileMenu() {
+        const mobileMenu = document.getElementById('mobileMenu');
+        if (mobileMenu) {
+          mobileMenu.classList.toggle('hidden');
+        }
+      }
     </script>
   </body>
 </html>
